; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_bundle.c_bundle_SessionTimeout.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/ppp/extr_bundle.c_bundle_SessionTimeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bundle = type { i32 }

@LogPHASE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"Session-Timeout timer expired\0A\00", align 1
@CLOSE_STAYDOWN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @bundle_SessionTimeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bundle_SessionTimeout(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.bundle*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.bundle*
  store %struct.bundle* %5, %struct.bundle** %3, align 8
  %6 = load i32, i32* @LogPHASE, align 4
  %7 = call i32 @log_Printf(i32 %6, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.bundle*, %struct.bundle** %3, align 8
  %9 = call i32 @bundle_StopSessionTimer(%struct.bundle* %8)
  %10 = load %struct.bundle*, %struct.bundle** %3, align 8
  %11 = load i32, i32* @CLOSE_STAYDOWN, align 4
  %12 = call i32 @bundle_Close(%struct.bundle* %10, i32* null, i32 %11)
  ret void
}

declare dso_local i32 @log_Printf(i32, i8*) #1

declare dso_local i32 @bundle_StopSessionTimer(%struct.bundle*) #1

declare dso_local i32 @bundle_Close(%struct.bundle*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
